--- a/css/dark.css
+++ b/css/dark.css
@@ -40,7 +40,7 @@ body #side-panel.dark { background-color: #383838; }
 
 .dark .section,
 .section.dark {
-	background-color: #282828;
+	background-color: #4b4b4b;
 	border-color: rgba(255,255,255,0.1);
 }
 
