--- a/css/style.css
+++ b/css/style.css
@@ -567,17 +567,19 @@ span.middot {
 	position: relative;
 	margin: 60px 0;
 	padding: 60px 0;
-	background-color: #FFF;
+	background-color: initial;
 	overflow: hidden;
 }
 
 .parallax {
-	background-color: transparent;
+	background-color: #FFF;
 	background-attachment: fixed;
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	overflow: hidden;
 	will-change: transform;
+	margin: 0 15px;
+	border-radius: 5px;
 }
 
 .mobile-parallax,
@@ -601,7 +603,7 @@ span.middot {
 
 .section:hover .revealer-image { bottom: -50px; }
 
-#section-hobbies .section{
+#section-hobbies{
 	background-color: rgb(242, 163, 110) !important;
 }
 
