--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,7 +24,7 @@ small,
 .before-heading,
 .wedding-head .first-name span,
 .wedding-head .last-name span,
-.font-secondary { font-family: 'Roboto', sans-serif; }
+.font-secondary { font-family: 'Segoe UI', sans-serif; }
 
 h1,
 h2,
