--- a/css/style.css
+++ b/css/style.css
@@ -3357,8 +3357,7 @@ body:not(.stretched) .slider-parallax .slider-parallax-inner { left: auto; }
 #page-title {
 	position: relative;
 	padding: 50px 0;
-	background-color: #F5F5F5;
-	border-bottom: 1px solid #EEE;
+	background-color: #FFF;
 }
 
 #page-title .container { position: relative; }
