--- a/css/style.css
+++ b/css/style.css
@@ -3356,7 +3356,7 @@ body:not(.stretched) .slider-parallax .slider-parallax-inner { left: auto; }
 
 #page-title {
 	position: relative;
-	padding: 50px 0;
+	padding: 50px 0 0 0;
 	background-color: #FFF;
 }
 
@@ -3549,7 +3549,7 @@ body.stretched .container-fullwidth .breadcrumb { right: 60px !important; }
 
 .content-wrap {
 	position: relative;
-	padding: 80px 0;
+	padding: 50px 0;
 }
 
 #content .container { position: relative; }
