--- a/css/onepage.css
+++ b/css/onepage.css
@@ -219,6 +219,7 @@ body.side-panel-left.side-push-panel.side-panel-open.stretched #header .containe
 	font-weight: 400;
 	border-bottom-width: 1px;
 	font-style: normal;
+	color: #843c0c;
 }
 
 .more-link i.icon-angle-right {
