--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ a {
 
 a:hover { color: #767171; }
 
+.card-body a { color: #1ABC9C; }
+
+.card-body a:hover { color: #666; }
+
 a img { border: none; }
 
 img { max-width: 100%; }
