projects page layout

--- a/css/font-icons.css
+++ b/css/font-icons.css
@@ -501,7 +501,8 @@
 .icon-checkmark:before {
   content: "\e658";
 }
-.icon-checkbox-checked:before {
+.
+:before {
   content: "\e659";
 }
 .icon-checkbox:before {
