--- a/css/style.css
+++ b/css/style.css
@@ -10813,7 +10813,7 @@ blockquote.float-right {
 	zoom: 1;
 	width: 8px;
 	height: 8px;
-	margin: 30px 4px 0 4px;
+	margin: 0px 4px 40px 4px;
 	opacity: 0.5;
 	border-radius: 50%;
 	background-color: #1ABC9C;
