--- a/css/onepage.css
+++ b/css/onepage.css
@@ -150,7 +150,7 @@ body.side-panel-left.side-push-panel.side-panel-open.stretched #header .containe
 .heading-block h2 {
 	font-weight: 500;
 	letter-spacing: 3px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Helvetica', sans-serif;
 }
 
 
