--- a/css/style.css
+++ b/css/style.css
@@ -1097,11 +1097,11 @@ body.stretched #header.full-header .container {
 #logo a p{
 	font-family: 'Segoe UI', sans-serif;
 	font-weight: 420;
-	font-size: 26px;
-	padding: 18px 20px;
+	font-size: 24px;
+	padding: 17px 20px;
 	color: #843c0c;
 	line-height: normal;
-	letter-spacing: 0.12em;
+	letter-spacing: 0.08em;
 	margin-bottom: 0;
 }
 
@@ -12160,16 +12160,26 @@ button.toast-close-button {
 .footer-widgets-wrap .col_five_sixth { margin-bottom: 0; }
 
 #contacts {
-	padding: 20px 0;
+	padding: 10px 0;
 	background-color: #f2a36e;
 }
 
 #contact-info{
-	font-size: 17px;
+	font-size: 16px;
 	line-height: 1.8;
 	font-weight: lighter;
 	letter-spacing: 0.15em;
 	margin: 20px auto;
+}
+
+@media (min-width: 768px){
+	#contact-info {
+		font-size: 17px;
+		line-height: 1.8;
+		font-weight: lighter;
+		letter-spacing: 0.15em;
+		margin: 20px auto;
+	}
 }
 
 #contacts i.footer-icon {
