--- a/css/style.css
+++ b/css/style.css
@@ -6642,7 +6642,7 @@ body:not(.device-sm):not(.device-xs) .countdown.countdown-large.coming-soon .cou
 	cursor: pointer;
 	outline: none;
 	white-space: nowrap;
-	margin: 30px 10px;
+	margin: 30px 10px 10px 10px;
 	padding: 0 22px;
 	font-size: 14px;
 	height: 40px;
